restructure, documentation, fix CI