@@ -1,10 +1,8 @@
 package edu.kit.kastel.sdq.artemis4j;
 
-import edu.kit.kastel.sdq.artemis4j.api.ArtemisClientException;
-import edu.kit.kastel.sdq.artemis4j.new_api.Annotation;
-import edu.kit.kastel.sdq.artemis4j.new_api.ArtemisInstance;
-import edu.kit.kastel.sdq.artemis4j.new_api.penalty.GradingConfig;
-import edu.kit.kastel.sdq.artemis4j.new_client.ArtemisClient;
+import edu.kit.kastel.sdq.artemis4j.client.ArtemisInstance;
+import edu.kit.kastel.sdq.artemis4j.grading.ArtemisConnection;
+import edu.kit.kastel.sdq.artemis4j.grading.penalty.GradingConfig;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
@@ -14,6 +12,8 @@ import java.util.Comparator;
 import java.util.Locale;
 import java.io.File;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 public class NewAPITest {
     private static final String ARTEMIS_URL = "artemis-test.sdq.kastel.kit.edu";
     private static final String ARTEMIS_USERNAME = System.getenv("ARTEMIS_USER");
@@ -21,48 +21,93 @@ public class NewAPITest {
 
     @Test
     void testLogin() throws ArtemisClientException, IOException {
+        // An ArtemisInstance describes where we want to connect to
+        // For the user it's just a fancy wrapper around a URL
         var artemis = new ArtemisInstance(ARTEMIS_URL);
-        var client = ArtemisClient.fromUsernamePassword(artemis, ARTEMIS_USERNAME, ARTEMIS_PASSWORD);
-        System.out.println("User is " + client.getAssessor().getLogin());
 
-        var course = client.getCourses().get(4);
+        // Let's connect to Artemis
+        // This performs username & password authentication, but you can also supply a token
+        var connection = ArtemisConnection.connectWithUsernamePassword(artemis, ARTEMIS_USERNAME, ARTEMIS_PASSWORD);
+        System.out.println("User is " + connection.getAssessor().getLogin());
+
+        // Fetch all courses, and get the first one (not the course with id 0!)
+        // Network requests are generally only performed once when required, and the results are cached
+        var course = connection.getCourses().getFirst();
         System.out.println(course.getTitle());
 
-        var exercise = course.getExercises().get(0);
+        // Get the first exercise (not the exercise with id 0!) in the course
+        var exercise = course.getExercises().getFirst();
         System.out.println(exercise.getTitle());
 
+        // For grading, we need the grading config
+        // A config is always tailored to a specific exercise, and the constructor method throws if
+        // they don't match
         var gradingConfig = GradingConfig.readFromString(
                 Files.readString(Path.of("src/test/resources/grading-config-sheet1taskB.json")),
                 exercise
         );
 
-        var assessment = exercise.tryLockSubmission(523, 0, gradingConfig).orElseThrow();
+        // We lock the submission with id 524 for the first correction round
+        // You can also use tryLockNextSubmission(correctionRound, gradingConfig) to request the next submission to grade
+        // without supplying an id
+        var assessment = exercise.tryLockSubmission(524, 0, gradingConfig).orElseThrow();
         assessment.clearAnnotations();
 
+        // Let's clone the test repository & submission into a temporary directory
+        // The test repo will be cloned into test_content, and within that a folder 'assignment' will be created,
+        // into which the student's submission will be cloned
+        // The cloneInto() method returns the path to the assignment folder
+        // Git authentication will be using the Artemis password, since no token is provided
+        // This works for Artemis' new LocalVC, but not necessarily for GitLab (can't test that right now)
         var submissionPath = Path.of("test_content");
-        if (!Files.exists(submissionPath)) {
-            Files.createDirectories(submissionPath);
+        try {
+            var studentCodePath = assessment.getSubmission().cloneInto(submissionPath, null);
+        } finally {
+            deleteDirectory(submissionPath);
         }
-        assessment.getSubmission().cloneInto(submissionPath, null);
-        try (var dirStream = Files.walk(submissionPath)) {
+
+        // Add a non-custom annotation with a custom message
+        assessment.addPredefinedAnnotation(gradingConfig.getMistakeTypeById("complexCode").get(), "src/edu/kit/kastel/StringUtility.java", 12, 13, "this is a custom message");
+        assertEquals(-0.5, assessment.calculateTotalPointsOfAnnotations());
+
+        // Add a custom annotation
+        // The total points will not change, since the grading config specifies that the "comment" rating group cannot deduct points
+        assessment.addCustomAnnotation(gradingConfig.getMistakeTypeById("custom").get(), "src/edu/kit/kastel/StringUtility.java", 40, 40, "custom", -1.0);
+        assertEquals(-0.5, assessment.calculateTotalPointsOfAnnotations());
+
+        // unnecessaryComplex has a threshold of 5 annotations, so adding 4 doesn't change to total points
+        for (int i = 0; i < 4; i++) {
+            assessment.addPredefinedAnnotation(gradingConfig.getMistakeTypeById("unnecessaryComplex").get(), "src/edu/kit/kastel/StringUtility.java", 13, 13, null);
+        }
+        assertEquals(-0.5, assessment.calculateTotalPointsOfAnnotations());
+
+        // Adding a fifth annotation will deduct 0.5 points
+        assessment.addPredefinedAnnotation(gradingConfig.getMistakeTypeById("unnecessaryComplex").get(), "src/edu/kit/kastel/StringUtility.java", 13, 13, null);
+        assertEquals(-1.0, assessment.calculateTotalPointsOfAnnotations());
+
+        // Above, we only checked the points deducted by annotations
+        // We can also look at the total points, including tests
+        // The submission passed all tests, so the total points are the maximum points minus the points deducted by annotations
+        assertEquals(assessment.getMaxPoints() - 1.0, assessment.calculateTotalPoints());
+
+        try {
+            // Save & submit the assessment, and translate all messages to German
+            // This includes (non-custom) annotation messages, the headers of the feedbacks in Artemis, ...
+            assessment.saveOrSubmit(true, Locale.GERMANY);
+        } catch (Exception ex) {
+            // Cancel the assessment if anything goes wrong, so that it is not locked indefinitely
+            // This is just required for the test, in practice you wouldn't want to delete the assessment
+            assessment.cancel();
+            throw ex;
+        }
+    }
+
+    private static void deleteDirectory(Path path) throws IOException {
+        try (var dirStream = Files.walk(path)) {
             dirStream
                     .map(Path::toFile)
                     .sorted(Comparator.reverseOrder())
                     .forEach(File::delete);
-        }
-
-        assessment.addAnnotation(new Annotation(gradingConfig.getMistakeTypeById("complexCode").get(), "src/edu/kit/kastel/StringUtility.java", 12, 13, "custom", null, Annotation.AnnotationSource.MANUAL_FIRST_ROUND));
-        assessment.addAnnotation(new Annotation(gradingConfig.getMistakeTypeById("custom").get(), "src/edu/kit/kastel/StringUtility.java", 40, 40, "custom", -1.0, Annotation.AnnotationSource.MANUAL_FIRST_ROUND));
-
-        for (int i = 0; i < 5; i++) {
-            assessment.addAnnotation(new Annotation(gradingConfig.getMistakeTypeById("unnecessaryComplex").get(), "src/edu/kit/kastel/StringUtility.java", 13, 13, null, null, Annotation.AnnotationSource.MANUAL_FIRST_ROUND));
-        }
-
-        try {
-            assessment.saveOrSubmit(true, Locale.GERMANY);
-        } catch (Exception ex) {
-            assessment.cancel();
-            throw ex;
         }
     }
 }
